@@ -5,7 +5,10 @@ Class('JooseX.CPS.Continuation', {
         previous        : null,
         
         statements      : Joose.I.Array,
-        type            : 'Sequential',
+        type            : 'Sequential', // or 'Parallel'
+        
+        maxAndBranches  : 10,
+        noExFromAnd     : false,
         
         entered         : false,
         leaved          : false,
@@ -107,32 +110,44 @@ Class('JooseX.CPS.Continuation', {
             
             var statements  = this.statements
             var length      = statements.length
+            var noExFromAnd = this.noExFromAnd
             var me          = this
             
+            var exceptions  = []
             var results     = []
             var counter     = 0
             
-            Joose.A.each(statements, function (statement, index) {
+            var cont        = function () {
+                
+                if (++counter == length) 
+                    if (exceptions.length && !noExFromAnd)
+                        me.THROW.apply(me, exceptions)
+                    else
+                        me.leave.apply(me, results)
+                else
+                    if (statements.length)
+                        launchStatement(statements.shift(), length - statements.length - 1)
+                        
+            }
+            
+            var launchStatement = function (statement, index) {
                 
                 TRY(statement.func, statement.scope, statement.args || args).THEN(function () {
                     
                     results[ index ] = arguments
                     
-                    this.CONT.CONTINUE()
+                    cont()
                     
-                }).CATCH(function () {
+                }).CATCH(function (e) {
                     
-                    results[ index ] = arguments
+                    (noExFromAnd ? results : exceptions)[ index ] = e
                     
-                    this.CONT.CONTINUE()
+                    cont()
                     
-                }).FINALLY(function () {
-                    
-                    counter++
-                        
-                    if (counter == length) me.leave.apply(me, results)
                 }).NOW()
-            })
+            }
+            
+            for (var i = 0; i < this.maxAndBranches && i < length; i++) launchStatement(statements.shift(), i)
         },
         
         
@@ -349,6 +364,20 @@ Class('JooseX.CPS.Continuation', {
         },
         
         
+        ANDMAX : function (num) {
+            this.maxAndBranches = num
+            
+            return this
+        },
+        
+        
+        AND_NOEX : function () {
+            this.noExFromAnd = true
+            
+            return this
+        },
+        
+        
         NOW : function () {
             var root = this.getNearestNotEntered()
             
@@ -404,6 +433,20 @@ Class('JooseX.CPS.Continuation', {
         // Synonyms
         and : function () {
             return this.AND.apply(this, arguments)
+        },
+        
+        
+        andMax : function (num) {
+            this.maxAndBranches = num
+            
+            return this
+        },
+        
+        
+        andNoEx : function () {
+            this.noExFromAnd = true
+            
+            return this
         },
         
         
