@@ -32,6 +32,16 @@ Role('JooseX.CPS.ControlFlow', {
         },
         
         
+        ANDMAX : function (num) {
+            return this.__getCONT__().ANDMAX(num)
+        },
+        
+        
+        AND_NOEX : function () {
+            return this.__getCONT__().AND_NOEX()
+        },
+        
+        
         THEN : function (func, scope, args) {
             return this.__getCONT__().THEN(func, scope || this, args)
         },
