@@ -40,9 +40,11 @@ Harness.start(
     '034_continued_methods_attach.t.js',
     '035_continued_methods_sequencing.t.js',
     '036_continued_methods_fallback.t.js',
-    '040_statement_parallel_basics.t.js',
-    '041_statement_parallel_throw.t.js',
+    '040_parallel_basics.t.js',
+    '041_parallel_throw.t.js',
+    '042_parallel_throw_no_ex.t.js',
     '045_statement_parallel_throw.t.js',
+    '046_and_max.t.js',
     '050_double_leave_sequential.js',
     '051_finally_after_sequential.js',
     '052_now_on_empty_cont.js',
